// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:button-toolbar 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-role="form-item"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-role="form-item"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ButtonToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <button
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                type="button"
              >
                <span>
                  OpenDialog
                </span>
              </button>
              <button
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                type="submit"
              >
                <span>
                  Submit
                </span>
              </button>
              <button
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                type="reset"
              >
                <span>
                  Reset
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-toolbar 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-role="form-item"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-role="form-item"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ButtonToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <button
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                type="button"
              >
                <span>
                  OpenDialog
                </span>
              </button>
              <button
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                type="submit"
              >
                <span>
                  Submit
                </span>
              </button>
              <button
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                type="reset"
              >
                <span>
                  Reset
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
  <div
    class="prismui-dialog-widget __PRISMUI_COMPONENT_CLASS_PREFIX__Modal __PRISMUI_COMPONENT_CLASS_PREFIX__Modal--1th"
    data-prismui-theme="cxd"
    role="dialog"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Modal-overlay in"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Modal-content in"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Modal-header"
      >
        <a
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            class="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Modal-title"
        >
          提示
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Modal-body"
        role="dialog-body"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            对，你刚点击了！
          </span>
        </span>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Modal-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
